fixed text and image alignment at admin/details

--- a/public/styles/adminStyles.css
+++ b/public/styles/adminStyles.css
@@ -20,17 +20,26 @@ body header {
     height: 80px;
 }
 
-/*=== INDEX ===*/
-
-body header a img {
-    margin: 25px 0 25px;
-    height: 26.9px;
-    width: 90.6px;
-    margin-left: 230px;
+body header #logo {
+    width: 940px;
+    margin: 0 auto;
 }
 
+body header #logo a {
+    display: contents;
+}
+
+body header #logo a img {
+    margin: 25px auto;
+    width: 91px;
+    height: 27px;
+}
+
+/*=== INDEX ===*/
+
 .title {
-    margin-left: 230px;
+    width: 940px;
+    margin: 0 auto;
 }
 
 .title h2 {
@@ -78,7 +87,7 @@ body header a img {
 
 .information a {
     text-decoration: none;
-    color: #6558C3;
+    color: var(--rocketseat-color);
     font-size: 14px;
     line-height: 16px;
     font-weight: bold;
@@ -112,12 +121,23 @@ body header a img {
 }
 
 .detailed-recipe .image-container {
-    margin-left: 230px;
+    text-align: center;
 }
 
 .detailed-recipe .image-container img {
-    width: 940px;
+    max-width: 940px;
     height: 280px;
     margin-top: 24px;
     border-radius: 15px;
+}
+
+.header-information {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.header-information h3 {
+    font-size: 36px;
+    font-weight: bold;
+    line-height: 42px;
 }
